# folder-structure-generator

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
folder_structure/: __init__.py  cli.py  folder_structure_generator.py
libname/: __init__.py  folder_structure_generator.py
tests/: test_folder_structure_generator.py
