[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-structure-generator"
version = "0.0.2"
authors = [
  { name="Ujjawal Poudel", email="ujjawalpoudel@gmail.com" },
]
description = 'The "Folder Structure Generator" simplifies the generation of project directory structures. Easily create a predefined directory tree, copy it to project documentation or README files, and save time when setting up new projects. Eliminate manual directory creation, ensure consistency across projects, and enhance project organization.'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["python",'documentation', "structure"]

[project.urls]
Repository = "https://github.com/ujjawalpoudel/folder-structure-generator"
"Bug Tracker" = "https://github.com/ujjawalpoudel/folder-structure-generator/issues"