[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-structure-generator"
version = "0.1.0"
description = "Generate Markdown-friendly folder trees for project documentation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ujjawal Poudel", email = "ujjawalpoudel@gmail.com" },
]
keywords = ["documentation", "folder-structure", "markdown", "project-tree"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.scripts]
folder-structure = "folder_structure.cli:main"
folder-structure-generator = "folder_structure.cli:main"

[project.urls]
Homepage = "https://github.com/ujjawalpoudel/folder-structure-generator"
Repository = "https://github.com/ujjawalpoudel/folder-structure-generator"
Issues = "https://github.com/ujjawalpoudel/folder-structure-generator/issues"

[tool.setuptools.packages.find]
include = ["folder_structure*"]
